[gd_scene load_steps=7 format=3 uid="uid://br0s485r0hect"]

[ext_resource type="Script" path="res://Main.gd" id="1_3g1ap"]
[ext_resource type="PackedScene" uid="uid://xrrfsn1u0ds1" path="res://Mob.tscn" id="2_yronn"]
[ext_resource type="PackedScene" uid="uid://g8j75wwoh6xs" path="res://Player.tscn" id="3_tbg63"]
[ext_resource type="PackedScene" uid="uid://c0u5rdpkk6tp3" path="res://HUD.tscn" id="4_jh3el"]
[ext_resource type="PackedScene" uid="uid://bc44a2wgukkol" path="res://BackGround.tscn" id="5_eqxiy"]

[sub_resource type="Curve2D" id="Curve2D_6r8sq"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_3g1ap")
mob_scene = ExtResource("2_yronn")

[node name="Background" parent="." instance=ExtResource("5_eqxiy")]

[node name="Player" parent="." instance=ExtResource("3_tbg63")]
top_level = true
visibility_layer = 3

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition2" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_6r8sq")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_jh3el")]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
